force-app/main/default/objects/Investigation__c/fields/Case_Connect_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Connect_Approval_Status__c</fullName>
    <label>Case Connect Approval Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>