force-app/main/default/objects/Investigation__c/fields/Case_Connect_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Connect_ID__c</fullName>
    <label>Case Connect ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>