force-app/main/default/objects/Investigation__c/fields/Is_this_for_supervisor__c.field-meta.xml
<CustomField>
    <fullName>Is_this_for_supervisor__c</fullName>
    <formula>(CreatedById = $User.Id || TEXT( CreatedBy.Jurisdiction__c ) = TEXT( $User.Jurisdiction__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is this for supervisor</label>
    <type>Checkbox</type>
</CustomField>