force-app/main/default/objects/Investigation__c/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Connect</label>
    <referenceTo>Service_Case__c</referenceTo>
    <relationshipLabel>Investigations</relationshipLabel>
    <relationshipName>Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>