force-app/main/default/objects/Investigation__c/fields/Supervisor_Approver__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigations1</relationshipName>
    <type>Lookup</type>
</CustomField>