force-app/main/default/objects/Investigation__c/listViews/Investigations.listView-meta.xml
<ListView>
    <fullName>Investigations</fullName>
    <columns>Danger__c</columns>
    <columns>NAME</columns>
    <columns>Intake__c</columns>
    <columns>Head_of_Household__c</columns>
    <columns>CPS_Response_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_this_for_supervisor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Investigations</label>
</ListView>