force-app/main/default/objects/Investigation__c/listViews/My_Investigation.listView-meta.xml
<ListView>
    <fullName>My_Investigation</fullName>
    <columns>Danger__c</columns>
    <columns>NAME</columns>
    <columns>Intake__c</columns>
    <columns>Head_of_Household__c</columns>
    <columns>CPS_Response_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Investigation</label>
</ListView>